201 Задача http://eltech.xomak.net/redmine/issues/201

--- a/BlackJack/nbproject/project.properties
+++ b/BlackJack/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=bjack_interface_v1.pkg0.Bjack_interface_v1
+main.class=Game.Bjack_interface_v1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
